objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>FirstPublishedType__c</fullName>
        <label>FirstPublishedType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>external_finder__c</fullName>
        <label>external_finder</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa_external_id__c</fullName>
        <externalId>true</externalId>
        <label>metazoa_external_id</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>Test_Me</fullName>
        <active>true</active>
        <label>Test Me</label>
    </recordTypes>
</CustomObject>